kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nanopaperwallet-app
  namespace: nanopaperwallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nanopaperwallet-app
  template:
    metadata:
      labels:
        app: nanopaperwallet-app
    spec:
      containers:
        - name: nanopaperwallet-app
          image: replaceme
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 750Mi
          ports:
            - containerPort: 5000
              name: app
