kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nanopaperwallet-ingress
  namespace: nanopaperwallet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header CF-Connecting-IP;
spec:
  tls:
    - hosts:
        - nanopaperwallet.com
        - www.nanopaperwallet.com
      secretName: nanopaperwallet-com-server-secret
  rules:
    - host: nanopaperwallet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nanopaperwallet
                port:
                  number: 5000
    - host: www.nanopaperwallet.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: nanopaperwallet
                port:
                  number: 5000
